# GoodOSAppBackEnd

./: .gitignore  ecosystem.config.cjs  package-lock.json  package.json
docs/: enterprise-operations.md  goodbase-deprecation-policy.md  goodbase-home-recovery.md  goodbase-offline-storage-standard.md  goodbase-operational-proof.md  goodbase-phases1-5-production.md  goodbase-phases16-20.md  goodbase-phases31-38.md  goodbase-phases39-45.md  goodbase-phases46-50.md  goodbase-sdk-certification.md  goodbase-updated-audit-corrections.md  goodos-postman-collection.json  goodos-topbar-integration.md  goodspeech-kokoro.md  openapi.json  phase1-goodbase-rest-production.md  phase16-enterprise-api-gateway.md  phase17-rules-engine-v2.md  phase18-storage-v2.md  phase19-selector-fix.md  phase19-update-sites.md  phase2-goodbase-automatic-graphql.md  phase20-live-status.md  product-login-contract.md  runtime-health.md  system-audit-2026-07-24.md
migrations/: 20260716_enterprise_foundation_v1.sql  20260716_goodos_api_access_live_v1.sql  20260716_goodos_roles_console_v1.sql  20260716_goodos_settings_live_v1.sql  20260716_goodos_teams_v1.sql  20260716_public_signup_email_verification.sql  20260718_phase15_secure_mfa_foundation.sql  20260718_phase15b_enforce_privileged_mfa.sql  20260718_phase15c1_oidc_domain_foundation.sql  20260718_phase15c2_oidc_login_callback.sql  20260718_phase15d_goodid_provider_active_status.sql  20260718_phase15e_scim_complete.sql  20260718_phase19_update_sites.sql  (+48 more)
sdks/python/: README.md  pyproject.toml
sdks/python/goodbase/: __init__.py  client.py  telemetry.py
(+344 files in other folders)
